--- a/src/components/molekul/UserCard.css
+++ b/src/components/molekul/UserCard.css
@@ -4,18 +4,18 @@
 
 .image{
     border-radius: 100%;
-    margin-bottom: 5%;
-    width: 8rem;
+    margin-bottom: 2%;
+    width: 7rem;
 }
 
 .title{
-    color: #131515;
+    color: #ffffff;
     font-family:  "Times New Roman", serif;
 
 }
 
 .name{
-    color: 	#d6a7a7;
+    color: 	#ffffff;
     font-family:  "Times New Roman", monospace;
-    font-size: large;
+    font-size: medium;
 }
