--- a/src/pages/HomeDemo.css
+++ b/src/pages/HomeDemo.css
@@ -1,217 +1,309 @@
 .home-s {
-    margin: 0;
-    box-sizing: border-box;
-    color: white;
-    font-family:'Times New Roman', Times, serif;
+  margin: 0;
+  box-sizing: border-box;
+  color: white;
+  font-family:'Times New Roman', Times, serif;
 
 }
 
+.login-bg {
+background-color: black;
+background-image: url(https://img.freepik.com/free-vector/neon-lined-pattern-dark-background-vector_53876-173383.jpg?w=740&t=st=1715685801~exp=1715686401~hmac=af04078417e639688b29cb654b2bc92cdebd1a7a2bbc164280bb23883afaad2f);
+min-height: 100vh; /* Tam ekran yüksekliği */
+display: flex;
+justify-content: center;
+align-items: center;
+}
+
+.user-cards{
+position: absolute;
+top: 1.8%;
+left: 10%;
+width: 100%;
+height: 90.5%;
+display: none;
+align-items: center;
+justify-content:center;
+background-color: rgb(255, 255, 255);
+}
+
+
 .landingpage {
-    width: 224vh;
-    height: 100vh;
-    display: flex;
-    flex-direction: column;
-    align-items: center;
-    justify-content: space-around;
-    position: relative;
-    transition: 0.5s;
-    font-family: "Merianda";
+  width: 200vh;
+  height: 100vh;
+  display: flex;
+  flex-direction: column;
+  align-items: center;
+  justify-content: space-around;
+  position: relative;
+  transition: 0.5s;
+  font-family: "Merianda";
 }
 
 .video-bg {
-    width: 224vh;
-    height: 100vh;
-    position: absolute;
-    top: 0;
-    z-index: -1;
-    object-fit: cover;
+  width: 200vh;
+  height: 100vh;
+  position: absolute;
+  top: 0;
+  z-index: -1;
+  object-fit: cover;
 }
 
 .bg-overlay {
-    height: 100%;
-    width: 100%;
-    background-color: rgba(0,0,0,0.5);
-    position: absolute;
-    top: 0;
-    z-index: 0;
+  height: 100%;
+  width: 100%;
+  background-color: rgba(0,0,0,0.5);
+  position: absolute;
+  top: 0;
+  z-index: 0;
 }
 
 .navbarcss {
-    width: 100%;
-    height: 4em;
-    position: absolute;
-    top: 0;
-    left: 0;
-    justify-content: flex-start;
-    align-items: center;
-    z-index: 1;
-    
+  width: 100%;
+  height: 4em;
+  position: absolute;
+  top: 0;
+  left: 0;
+  justify-content: flex-start;
+  align-items: center;
+  z-index: 1;
+  
 }
 
 
 .home-text {
-    width: 70%;
-    height: 60%;
-    display: flex;
-    flex-direction: row;
-    align-items: center;
-    justify-content: space-around;
-    z-index: 2;
+  width: 70%;
+  height: 60%;
+  display: flex;
+  flex-direction: row;
+  align-items: center;
+  justify-content: space-around;
+  z-index: 2;
 }
 
 .h1-1 {
-    font-size: 6em;
-    animation-name: fade;
-    animation-duration: 4s;
+  font-size: 6em;
+  animation-name: fade;
+  animation-duration: 4s;
 }
 
 p {
-    justify-self: flex-end;
-    font-size: 2em;
+  justify-self: flex-end;
+  font-size: 2em;
 }
 
 .home-btn {
-    width: 6em;
-    height: 2em;
-    border: 2px solid white;
-    border-radius: 0.25em;
-    background-color: rgba(255, 255, 255, 0.457);
-    z-index: 1;
-    font-size: 2em;
-    display: flex;
-    justify-content: center;
-    align-items: center;
-    cursor: pointer;
+  width: 6em;
+  height: 2em;
+  border: 2px solid white;
+  border-radius: 0.25em;
+  background-color: rgba(255, 255, 255, 0.457);
+  z-index: 1;
+  font-size: 2em;
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  cursor: pointer;
 }
 .modal{
-    position: fixed;
-    top: 0;
-    left: 0;
-    width: 100%;
-    height: 100%;
-    display: none;
-    align-items: center;
-    justify-content: center;
-    background-color: rgba(0, 0, 0, 0.527);
+  position: fixed;
+  top: 0;
+  left: 0;
+  width: 100%;
+  height: 100%;
+  display: none;
+  align-items: center;
+  justify-content: center;
+  background-color: rgba(0, 0, 0, 0.527);
 }
 
 .modal form{
-    position: relative;
-    min-width: 30%;
-    min-width: 30;
-    display: flex;
-    flex-direction: column;
-    padding:  1rem;
-    background: linear-gradient(#141e30, #243b55);
-    border-radius: 1.5rem;
+  position: relative;
+  min-width: 30%;
+  min-width: 30;
+  display: flex;
+  flex-direction: column;
+  padding:  1rem;
+  background: linear-gradient(#141e30, #243b55);
+  border-radius: 1.5rem;
 }
 
 #modal-kapat {
-    position: absolute;
-    right: 0;
-    top: 0;
-    background-color: gray;
-    padding: 0.5rem;
-    border-bottom-left-radius: 1rem;
-    border-top-right-radius: 1rem;
-    cursor: pointer;
+  position: absolute;
+  right: 0;
+  top: 0;
+  background-color: gray;
+  padding: 0.5rem;
+  border-bottom-left-radius: 1rem;
+  border-top-right-radius: 1rem;
+  cursor: pointer;
 
 }
 
 .modal form input{
-    font-size: 1rem;
+  font-size: 1rem;
 }
 
 .navigation-buttons {
-    display: flex;
-    justify-content: space-between; /* Distribute buttons horizontally */
-    width: 20%; /* Adjust width as needed */
-    top: 50%;
+  display: flex;
+  justify-content: space-between; /* Distribute buttons horizontally */
+  width: 20%; /* Adjust width as needed */
+  top: 50%;
 
-  }
-
-  .navigation-buttons a {
-    background-color: #f1f1f1;
-    color: black;
-    border-radius: 50%;
-    text-decoration: none;
-    padding: 8px 16px;
-  }
-
-  .navigation-buttons a:first-child { /* Left button */
-    margin-left: 10; /* Move to left edge within the wrapper */
-  }
-  
-  .navigation-buttons a:last-child { /* Right button */
-    margin-right: -100; /* Move to right edge within the wrapper */
-  }
-
-  .body-l {
-    margin:0;
-    padding:0;
-    font-family: sans-serif;
-    background: linear-gradient(#141e30, #243b55);
-  }
-  
-  .login-box {
-    position: absolute;
-    top: 50%;
-    left: 50%;
-    width: 400px;
-    padding: 40px;
-    transform: translate(-50%, -50%);
-    background: rgba(0, 0, 0, 0.5);
-    box-sizing: border-box;
-    box-shadow: 0 15px 25px rgba(0, 0, 0, 0.6);
-    border-radius: 10px;
-  }
-
-  .login-page {
-    background-color: linear-gradient(#141e30, #243b55); /* Arka plan rengi */
 }
 
-  .login-box h1 {
-    margin: 0 0 30px;
-    padding: 0;
-    color: #fff;
-    text-align: center;
-  }
+.navigation-buttons a {
+  background-color: #f1f1f1;
+  color: black;
+  border-radius: 50%;
+  text-decoration: none;
+  padding: 8px 16px;
+}
 
-  .modal-1{
-    position: fixed;
-    top: 0;
-    left: 0;
-    width: 100%;
-    height: 100%;
-    display: flex;
-    align-items: center;
-    justify-content: center;
-    background-color: rgba(0, 0, 0, 0.527);
+.navigation-buttons a:first-child { /* Left button */
+  margin-left: 10; /* Move to left edge within the wrapper */
+}
+
+.navigation-buttons a:last-child { /* Right button */
+  margin-right: -100; /* Move to right edge within the wrapper */
+}
+
+.body-l {
+  margin:0;
+  padding:0;
+  font-family: sans-serif;
+  background: linear-gradient(#141e30, #243b55);
 }
 
 .login-box {
-    position: absolute;
-    top: 50%;
-    left: 50%;
-    width: 400px;
-    padding: 40px;
-    transform: translate(-50%, -50%);
-    background: linear-gradient(#141e30, #243b55); /* Arka plan rengi burada veriliyor */
-    box-sizing: border-box;
-    box-shadow: 0 15px 25px rgba(0, 0, 0, 0.6);
-    border-radius: 10px;
-  }
-  
-  
+  position: absolute;
+  top: 50%;
+  left: 50%;
+  width: 400px;
+  padding: 40px;
+  transform: translate(-50%, -50%);
+  background: rgba(0, 0, 0, 0.5);
+  box-sizing: border-box;
+  box-shadow: 0 15px 25px rgba(0, 0, 0, 0.6);
+  border-radius: 10px;
+}
+
+.login-page {
+  background-color: linear-gradient(#141e30, #243b55); /* Arka plan rengi */
+}
+
+.login-box h1 {
+  margin: 0 0 30px;
+  padding: 0;
+  color: #fff;
+  text-align: center;
+}
+
+.modal-1{
+  position: fixed;
+  top: 0;
+  left: 0;
+  width: 100%;
+  height: 100%;
+  display: flex;
+  align-items: center;
+  justify-content: center;
+  background-color: rgba(0, 0, 0, 0.527);
+}
+
+.login-box {
+  position: absolute;
+  top: 50%;
+  left: 50%;
+  width: 400px;
+  padding: 40px;
+  transform: translate(-50%, -50%);
+  background: linear-gradient(#141e30, #243b55); /* Arka plan rengi burada veriliyor */
+  box-sizing: border-box;
+  box-shadow: 0 15px 25px rgba(0, 0, 0, 0.6);
+  border-radius: 10px;
+}
+
+
+.personel-box {
+  position: absolute;
+  top: 50%;
+  left: 50%;
+  padding: 40px;
+  transform: translate(-50%, -50%);
+  background: linear-gradient(#141e30, #243b55);
+  box-sizing: border-box;
+  box-shadow: 0 15px 25px rgba(0, 0, 0, 0.6);
+  border-radius: 10px;
+  width: 90%; /* Adjust width as needed */
+  max-width: 1200px; /* Ensure it doesn't get too wide */
+  max-height: 700px;
+  overflow: auto; /* Handle overflow */
+  color: #f1f1f1;
+  flex-direction: column;
+}
+
+.personnel-table {
+  width: 100%;
+  border-collapse: collapse;
+}
+
+.personnel-table th, .personnel-table td {
+  padding: 12px;
+  text-align: left;
+  border-bottom: 1px solid #ddd;
+  color: white; /* Ensure text is readable on dark background */
+}
+
+.personnel-table th {
+  background: rgba(20, 30, 48, 0.9);
+}
+
+.personnel-table tbody tr:hover {
+  background: rgba(20, 30, 48, 0.7);
+}
+
+.btn {
+  background-color: #243b55;
+  color: white;
+  border: none;
+  padding: 5px 10px;
+  border-radius: 5px;
+  cursor: pointer;
+}
+
+.btn:hover {
+  background-color: #141e30;
+}
+.personel-box button {
+  margin: 10px; /* Adjust margins for spacing */
+  padding: 5px 10px; /* Adjust padding for content */
+  display: inline-block; /* Ensures buttons appear next to each other */
+}
+
+.table-box {
+  position: absolute;
+  top: 50%;
+  left: 50%;
+  padding: 40px;
+  transform: translate(-50%, -50%);
+  background: linear-gradient(#141e30, #243b55);
+  box-sizing: border-box;
+  box-shadow: 0 15px 25px rgba(0, 0, 0, 0.6);
+  border-radius: 10px;
+  width: 90%; /* Adjust width as needed */
+  max-width: 1200px; /* Ensure it doesn't get too wide */
+  overflow: auto; /* Handle overflow */
+}
 
 /* ---------- Animation --------------- */
 @keyframes fade {
-    0% {
-        opacity: 0;
-        margin-left: 3em;
-    }
-    100% {
-        opacity: 1;
-    }
+  0% {
+      opacity: 0;
+      margin-left: 3em;
+  }
+  100% {
+      opacity: 1;
+  }
 }
 
